# ocr_project

./: .gitattributes  .gitignore  HUONG_DAN_DU_AN.md  HUONG_DAN_FINETUNE.md  README.md  dict_vi.txt  evaluate_recognition.py  main.py  pyproject.toml  requirements.txt  visualize_results.py
assets/: mau-ct01-template.docx  ~$u-ct01-template.docx
assets/form/: mau-ct01-template-tt53.docx  roi_norm_tt53.json
configs/: forms_manifest.yaml
configs/schema/: ct01_config.schema.json
configs/templates/: ct01_tt53.0.yaml  ct01_v1.0.yaml
debug_output/outputs_v8_checkpoint/: eval_results.json  summary.txt
docs/: HUONG_DAN_FINETUNE.md
finetune_data/: .~lock.mock_data_CT01.xlsx#  mock_data_CT01.xlsx
image_train/: Cache.cach  Label.txt  fileState.txt  rec_gt.txt
image_train/train/: rec_gt_train.txt
image_train/val/: rec_gt_val.txt
models/recognition/: config.yml
output_rec_mobile_new_db/: config.yml
output_rec_mobile_new_db/inference/: inference.pdiparams.info  inference.yml
real_test/: Label.txt  rec_gt.txt  run_alignment.py
real_test/outputs_v8_add_epoch/: eval_results_v8_add_epoch.json
scripts/: finetune_rec.py  split_dataset.py
src/: kie.py  ocr_engine.py  preprocess.py  validator.py
src/alignment/: __init__.py  form_aligner.py  orb_register.py  quality_estimator.py
src/config_detection/: __init__.py  config_loader.py  roi_calculator.py  roi_norm.json
src/data/: check_charset.py  split_dataset.py  synth_augment.py
src/evaluation/: auto_drop_below.py  auto_mark_difficult.py  build_gt_manifest.py  check_train_test_leak.py  compare_engines.py  (+11 more)
(+39 files in other folders)
